--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
+<!DOCTYPE html> 
+<html lang="en">
+<head>
+    <link rel="stylesheet" href="site.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=PT+Sans+Narrow:wght@400;700&display=swap" rel="stylesheet">
 
+    <title>Charlene Centeno | bioSite | CSD 340 Web Development with HTML and CSS</title>
+
+</head>    
+<body>
+
+<header>
+    <h1>jesse</h1>
+</header>
+
+<div id="navbar">
+    <a href="#">About</a>
+    <a href="#">Hobbies</a>
+    <a href="#">Goals</a>
+</div>
+
+<div id="about">
+    <div id="photo">
+        <img src="images/portrait.png" alt="portrait">
+    </div>
+
+    <div id="bio">
+        <h2>About</h2>
+        <p>
+        Jesse was born and raised in Southern California. 
+        He graduated from California State University, Fullerton, majoring in Communications / Advertising. 
+        Currently, he works as a Senior Revenue & Inventory Analyst for iHeart Media. 
+        People who know him would describe him as approachable, neighborly, reliable, courteous, observant, and hilarious.
+        </p>
+    </div>    
+</div>
+
+<footer>
+    <a href="https://charleneyc1985.github.io/csd-340/"> - Back to Landing Page -</a>
+</footer>
+
+</body>
+</html>
