--- a/goals.html
+++ b/goals.html
@@ -1,1 +1,58 @@
+<!DOCTYPE html> 
+<html lang="en">
+<head>
+    <link rel="stylesheet" href="site.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=PT+Sans+Narrow:wght@400;700&display=swap" rel="stylesheet">
 
+    <title>Charlene Centeno | bioSite | CSD 340 Web Development with HTML and CSS</title>
+
+</head>    
+<body>
+
+<header>
+    <h1>jesse</h1>
+</header>
+    
+<div id="navbar">
+     <a href="#">About</a>
+     <a href="#">Hobbies</a>
+     <a href="#">Goals</a>
+</div>
+
+<div class="image-gallery">
+    <div class="image">
+        <figure>
+            <img src="images/goal1.jpg" alt="dad">
+            <figcaption></figcaption>
+          </figure>
+    </div> 
+    <div class="image">
+        <figure>
+            <img src="images/goal2.jpg" alt="family">
+            <figcaption></figcaption>
+          </figure>
+    </div>
+    <div class="image">
+        <figure>
+            <img src="images/goal3.jpg" alt="house">
+            <figcaption></figcaption>
+          </figure>
+    </div> 
+</div>
+</div>
+
+<div id="container">
+        <h2>Goals</h2>
+        <p>
+        His favorite accomplishments are being a homeowner, having a reliable, steady job, being a parent with my wife, and being able to have a great work-life balance. His current goals are to guide our daughter to be a good person and keeping our house updated and maintained.
+        </p>
+</div>
+
+<footer>
+    <a href="https://charleneyc1985.github.io/csd-340/">- Back to Landing Page -</a>
+</footer>
+
+</body>
+</html>
