--- a/hobbies.html
+++ b/hobbies.html
@@ -1,1 +1,59 @@
+<!DOCTYPE html> 
+<html lang="en">
+<head>
+    <link rel="stylesheet" href="site.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=PT+Sans+Narrow:wght@400;700&display=swap" rel="stylesheet">
 
+    <title>Charlene Centeno | bioSite | CSD 340 Web Development with HTML and CSS</title>
+
+</head>    
+<body>
+
+<header>
+   <h1>jesse</h1>
+</header>
+    
+<div id="navbar">
+   <a href="#">About</a>
+   <a href="#">Hobbies</a>
+   <a href="#">Goals</a>
+</div>
+
+<div class="image-gallery">
+    <div class="image">
+        <figure>
+            <img src="images/hobby1.png" alt="tiki">
+            <figcaption></figcaption>
+          </figure>
+    </div> 
+    <div class="image">
+        <figure>
+            <img src="images/hobby3.png" alt="got">
+            <figcaption></figcaption>
+          </figure>
+    </div>
+    <div class="image">
+        <figure>
+            <img src="images/hobby2.png" alt="marvel">
+            <figcaption></figcaption>
+          </figure>
+    </div> 
+</div>
+
+<div id="container">
+    <h2>Hobbies</h2>
+    <p>
+    Jesse is a huge music lover, having several bands, where he played guitar and sang, growing up, and worked for local radio stations, where he would meet his future wife. He would note the following as his favorite artists: Band of Horses, Jimmy Eat World, and Anthony Green.
+	In his spare time, he loves to go on runs and watch his favorite shows and movies, most notably Marvel and Game of Thrones. His favorite Marvel character is Rocket from the Guardians of the Galaxy because “I love animals, and I love that he is small, who can handle his grounds, feisty, and funny.” His favorite Game of Thrones character is Ghost, who is Jon Snow’s dire wolf because, again, “I love animals, and he’s loyal to Jon Snow, so much that he helped him in battle.”
+	He is also a cocktail aficionado, and would say his favorite drink is a Gin and Tonic, made with Hendrick’s Gin and East Imperial Tonic Water.
+    </p>
+</div>
+
+<footer>
+    <a href="https://charleneyc1985.github.io/csd-340/">- Back to Landing Page -</a>
+</footer>
+
+</body>
+</html>
