--- a/goals.html
+++ b/goals.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="site.css"/>
+    <link rel="stylesheet" href="biosite.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=PT+Sans+Narrow:wght@400;700&display=swap" rel="stylesheet">
