--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
 <div id="navbar">
     <a href="#">About</a>
-    <a href="#">Hobbies</a>
-    <a href="#">Goals</a>
+    <a href="hobbies.html">Hobbies</a>
+    <a href="goals.html">Goals</a>
 </div>
 
 <div id="about">
