--- a/goals.html
+++ b/goals.html
@@ -16,8 +16,8 @@
 </header>
     
 <div id="navbar">
-     <a href="#">About</a>
-     <a href="#">Hobbies</a>
+     <a href="index.html">About</a>
+     <a href="hobbies.html">Hobbies</a>
      <a href="#">Goals</a>
 </div>
 
