--- a/hobbies.html
+++ b/hobbies.html
@@ -16,9 +16,9 @@
 </header>
     
 <div id="navbar">
-   <a href="#">About</a>
+   <a href="index.html">About</a>
    <a href="#">Hobbies</a>
-   <a href="#">Goals</a>
+   <a href="goals.html">Goals</a>
 </div>
 
 <div class="image-gallery">
