--- a/hobbies.html
+++ b/hobbies.html
@@ -45,7 +45,7 @@
 <div id="container">
     <h2>Hobbies</h2>
     <p>
-    Jesse is a huge music lover, having several bands, where he played guitar and sang, growing up, and worked for local radio stations, where he would meet his future wife. He would note the following as his favorite artists: Band of Horses, Jimmy Eat World, and Anthony Green.
+    Jesse is a huge music lover, having several bands, where he played guitar and sang, growing up, and worked for local radio stations, where he would meet his future wife, Charlene. He would note the following as his favorite artists: Band of Horses, Jimmy Eat World, and Anthony Green.
 	In his spare time, he loves to go on runs and watch his favorite shows and movies, most notably Marvel and Game of Thrones. His favorite Marvel character is Rocket from the Guardians of the Galaxy because “I love animals, and I love that he is small, who can handle his grounds, feisty, and funny.” His favorite Game of Thrones character is Ghost, who is Jon Snow’s dire wolf because, again, “I love animals, and he’s loyal to Jon Snow, so much that he helped him in battle.”
 	He is also a cocktail aficionado, and would say his favorite drink is a Gin and Tonic, made with Hendrick’s Gin and East Imperial Tonic Water.
     </p>
