--- a/index.html
+++ b/index.html
@@ -13,15 +13,13 @@
 
 <header>
     <h1>jesse</h1>
+    <u><a href="#">About</a></u>
+    <a href="goals.html">Goals</a>
+    <a href="hobbies.html">Hobbies</a>
+    <a href="https://charleneyc1985.github.io/csd-340/">Landing Page</a>
 </header>
 
-<div id="navbar">
-    <a href="#">About</a>
-    <a href="hobbies.html">Hobbies</a>
-    <a href="goals.html">Goals</a>
-</div>
-
-<div id="about">
+<div class="about">
     <div id="photo">
         <img src="images/portrait.png" alt="portrait">
     </div>
@@ -38,7 +36,7 @@
 </div>
 
 <footer>
-    <a href="https://charleneyc1985.github.io/csd-340/"> - Back to Landing Page -</a>
+    (c) 2023 Charlene Centeno
 </footer>
 
 </body>
