--- a/goals.html
+++ b/goals.html
@@ -13,30 +13,28 @@
 
 <header>
     <h1>jesse</h1>
-</header>
-    
-<div id="navbar">
-     <a href="index.html">About</a>
-     <a href="hobbies.html">Hobbies</a>
-     <a href="#">Goals</a>
-</div>
+    <a href="index.html">About</a>
+    <u><a href="#">Goals</a></u>
+    <a href="hobbies.html">Hobbies</a>
+    <a href="https://charleneyc1985.github.io/csd-340/">Landing Page</a>
+    </header>
 
 <div class="image-gallery">
     <div class="image">
         <figure>
-            <img src="images/goal1.jpg" alt="dad">
+            <img src="images/goal1.jpg" title="Dad"/>
             <figcaption></figcaption>
           </figure>
     </div> 
     <div class="image">
         <figure>
-            <img src="images/goal2.jpg" alt="family">
+            <img src="images/goal2.jpg" title="Family"/>
             <figcaption></figcaption>
           </figure>
     </div>
     <div class="image">
         <figure>
-            <img src="images/goal3.jpg" alt="house">
+            <img src="images/goal3.jpg" title="House"/>
             <figcaption></figcaption>
           </figure>
     </div> 
@@ -51,7 +49,7 @@
 </div>
 
 <footer>
-    <a href="https://charleneyc1985.github.io/csd-340/">- Back to Landing Page -</a>
+    (c) 2023 Charlene Centeno
 </footer>
 
 </body>
