--- a/hobbies.html
+++ b/hobbies.html
@@ -12,31 +12,29 @@
 <body>
 
 <header>
-   <h1>jesse</h1>
+    <h1>jesse</h1>
+    <a href="index.html">About</a>
+    <a href="goals.html">Goals</a>
+    <u><a href="#">Hobbies</a></u>
+    <a href="https://charleneyc1985.github.io/csd-340/">Landing Page</a>
 </header>
-    
-<div id="navbar">
-   <a href="index.html">About</a>
-   <a href="#">Hobbies</a>
-   <a href="goals.html">Goals</a>
-</div>
 
 <div class="image-gallery">
     <div class="image">
         <figure>
-            <img src="images/hobby1.png" alt="tiki">
+            <img src="images/hobby1.png" title="Cocktail Aficionado"/>
             <figcaption></figcaption>
           </figure>
     </div> 
     <div class="image">
         <figure>
-            <img src="images/hobby3.png" alt="got">
+            <img src="images/hobby3.png" title="Game of Thrones Live at the Hollywood Bowl"/>
             <figcaption></figcaption>
           </figure>
     </div>
     <div class="image">
         <figure>
-            <img src="images/hobby2.png" alt="marvel">
+            <img src="images/hobby2.png" title="Avengers Campus at Disney California Adventure Park">
             <figcaption></figcaption>
           </figure>
     </div> 
@@ -52,7 +50,7 @@
 </div>
 
 <footer>
-    <a href="https://charleneyc1985.github.io/csd-340/">- Back to Landing Page -</a>
+    (c) 2023 Charlene Centeno
 </footer>
 
 </body>
